[tool.poetry]
name = "viyyoor"
version = "0.1.0"
description = ""
authors = ["Thanathip"]

[tool.poetry.dependencies]
python = "^3.9"
flask-mongoengine = "^1.0.0"
qrcode = {extras = ["pil"], version = "^7.3.1"}
CairoSVG = "^2.5.2"
Flask-Login = "^0.5.0"
Flask-Caching = "^1.10.1"
pandas = "^1.3.5"
odfpy = "^1.4.1"
loginpass = "^0.5"
endesive = "^2.0.7"
XlsxWriter = "^3.0.2"
pdf2image = "^1.16.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
viyyoor-web = "viyyoor.cmd.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
