[tool.poetry]
name = "viyyoor"
version = "0.1.0"
description = ""
authors = ["Thanathip"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.5"
qrcode = "^7.4.2"
pillow = "^9.5.0"
cairosvg = "^2.7.0"
flask-login = "^0.6.2"
flask-caching = "^2.0.2"
pandas = "^2.0.2"
odfpy = "^1.4.1"
endesive = "^2.0.16"
xlsxwriter = "^3.1.2"
pdf2image = "^1.16.3"
openpyxl = "^3.1.2"
rq = "^1.15.0"
markdown = "^3.4.3"
authlib = "^1.2.0"
xlrd = "^2.0.1"
flask-me = "^1.0.2"
flask-wtf = "^1.1.1"
psusigner = "^0.1.6"
[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
viyyoor-web = "viyyoor.cmd.web:main"
viyyoor-worker = "viyyoor.cmd.worker:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
